# ArcSys

./: .env.example  .gitignore  LICENSE  README.md  errors.md  future.md  pyproject.toml  requirements.txt  run_cli.py  start_dev.py  test_debug.py
app/: __init__.py  main.py
app/agents/: __init__.py  architect.py  base.py  critic.py  meta_critic.py  planner.py  researcher.py  visualizer.py
app/api/: __init__.py  routes.py
app/core/: config.py  llm.py  logging.py
app/graph/: __init__.py  builder.py  state.py
app/schemas/: __init__.py  api.py
app/utils/: exceptions.py  security.py
static/: index.html
static/css/: chat.css
static/js/: chat.js
tests/: __init__.py  test_api.py
